--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <a href="regra3.html" class="menu-btn px-8 py-5 bg-indigo-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-indigo-700 transition-colors flex items-center justify-center gap-3">
                     <span>📏 Regra de 3 Simples e Composta - Matemática</span>
                 </a>
+                <a href="poligos7ano.html" class="menu-btn px-8 py-5 bg-pink-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-pink-700 transition-colors flex items-center justify-center gap-3">
+                    <span>🔷 Polígonos e Circunferência - 7º Ano</span>
+                </a>
             <a href="vozes.html" class="menu-btn px-8 py-5 bg-sky-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-sky-700 transition-colors flex items-center justify-center gap-3">
                 <span>📚 Vozes Verbais</span>
             </a>
