--- a/poligos7ano.html
+++ b/poligos7ano.html
@@ -33,7 +33,7 @@
             <section id="learn-section">
                 <div class="bg-white rounded-lg shadow p-6 mb-8">
                     <h2 class="text-2xl font-bold mb-4 text-sky-700">O que são Polígonos?</h2>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Polygon_Regular.svg/320px-Polygon_Regular.svg.png" alt="Exemplo de polígonos" class="flashcard-img">
+                    <img src="https://static.todamateria.com.br/upload/po/li/poligonosimples.jpg" alt="Exemplo de polígonos" class="flashcard-img">
                     <p class="mb-4">Polígonos são figuras geométricas planas formadas por segmentos de reta que se encontram apenas nos extremos, formando lados e vértices. Exemplos: triângulo, quadrado, pentágono, hexágono, etc.</p>
                     <ul class="list-disc ml-6 mb-4">
                         <li><b>Triângulo</b>: 3 lados</li>
@@ -43,17 +43,17 @@
                         <li><b>Heptágono</b>: 7 lados</li>
                         <li><b>Octógono</b>: 8 lados</li>
                     </ul>
-                    <img src="https://static.todamateria.com.br/upload/po/li/poligonos-1-cke.jpg" alt="Polígonos diversos" class="flashcard-img">
+                    <img src="https://static.todamateria.com.br/upload/ta/be/tabeladospoligonos-cke.jpg" alt="Polígonos diversos" class="flashcard-img">
                 </div>
                 <div class="bg-white rounded-lg shadow p-6 mb-8">
                     <h2 class="text-xl font-bold mb-3 text-sky-700">Convexo e Não Convexo</h2>
-                    <img src="https://static.todamateria.com.br/upload/po/li/poligonos-convexos-nao-convexos-cke.jpg" alt="Convexo e não convexo" class="flashcard-img">
+                    <img src="https://static.todamateria.com.br/upload/po/li/poligonoconvexo1.gif" alt="Convexo e não convexo" class="flashcard-img">
                     <p class="mb-2"><b>Polígono convexo</b>: todos os ângulos internos são menores que 180° e nenhum segmento entre dois pontos internos sai para fora da figura.</p>
                     <p class="mb-2"><b>Polígono não convexo</b>: possui pelo menos um ângulo interno maior que 180°, ou algum segmento entre dois pontos internos passa fora da figura.</p>
                 </div>
                 <div class="bg-white rounded-lg shadow p-6 mb-8">
                     <h2 class="text-xl font-bold mb-3 text-sky-700">Vértice, Diagonais e Lados</h2>
-                    <img src="https://static.todamateria.com.br/upload/ve/rt/vertice-diagonal-lado-poligono-cke.jpg" alt="Vértice, diagonal e lado" class="flashcard-img">
+                    <img src="https://static.todamateria.com.br/upload/po/li/poligonoelementos.jpg" alt="Vértice, diagonal e lado" class="flashcard-img">
                     <ul class="list-disc ml-6 mb-4">
                         <li><b>Vértice</b>: ponto de encontro de dois lados</li>
                         <li><b>Lado</b>: segmento de reta que forma o polígono</li>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="bg-white rounded-lg shadow p-6 mb-8">
                     <h2 class="text-xl font-bold mb-3 text-sky-700">Ângulos Internos e Externos</h2>
-                    <img src="https://static.todamateria.com.br/upload/an/gu/angulo-interno-externo-poligono-cke.jpg" alt="Ângulos internos e externos" class="flashcard-img">
+                    <img src="https://images.educamaisbrasil.com.br/content/banco_de_imagens/guia-de-estudo/D/elementos-poligonos-matematica.jpg" alt="Ângulos internos e externos" class="flashcard-img">
                     <p class="mb-2"><b>Ângulo interno</b>: formado dentro do polígono, entre dois lados consecutivos.</p>
                     <p class="mb-2"><b>Ângulo externo</b>: formado fora do polígono, prolongando um dos lados.</p>
                 </div>
