--- a/poligos7ano.html
+++ b/poligos7ano.html
@@ -103,61 +103,61 @@
         const flashcards = [
             {
                 question: "Qual o nome do polígono com 3 lados?",
-                img: "https://static.todamateria.com.br/upload/tr/ia/triangulo-cke.jpg",
+                img: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Equilateral-triangle.svg/200px-Equilateral-triangle.svg.png",
                 options: ["Triângulo", "Quadrado", "Pentágono"],
                 answer: "Triângulo"
             },
             {
                 question: "Qual o nome do polígono com 4 lados iguais?",
-                img: "https://static.todamateria.com.br/upload/qu/ad/quadrado-cke.jpg",
+                img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Square_-_black_simple.svg/200px-Square_-_black_simple.svg.png",
                 options: ["Quadrado", "Retângulo", "Hexágono"],
                 answer: "Quadrado"
             },
             {
                 question: "Qual dessas figuras NÃO é um polígono?",
-                img: "https://static.todamateria.com.br/upload/ci/rc/circunferencia-cke.jpg",
+                img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Circle_-_black_simple.svg/200px-Circle_-_black_simple.svg.png",
                 options: ["Circunferência", "Pentágono", "Hexágono"],
                 answer: "Circunferência"
             },
             {
                 question: "Qual o nome do polígono com 5 lados?",
-                img: "https://static.todamateria.com.br/upload/pe/nt/pentagono-cke.jpg",
+                img: "https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Regular_pentagon.svg/200px-Regular_pentagon.svg.png",
                 options: ["Pentágono", "Hexágono", "Heptágono"],
                 answer: "Pentágono"
             },
             {
                 question: "Qual o nome do segmento que liga o centro à borda da circunferência?",
-                img: "https://static.todamateria.com.br/upload/ci/rc/circunferencia-raio-diametro-cke.jpg",
+                img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Circle_-_black_simple.svg/200px-Circle_-_black_simple.svg.png",
                 options: ["Raio", "Diâmetro", "Lado"],
                 answer: "Raio"
             },
             {
                 question: "Qual o nome do polígono com 6 lados?",
-                img: "https://static.todamateria.com.br/upload/he/xa/hexagono-cke.jpg",
+                img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Regular_hexagon.svg/200px-Regular_hexagon.svg.png",
                 options: ["Hexágono", "Heptágono", "Octógono"],
                 answer: "Hexágono"
             },
             {
                 question: "Qual o nome do segmento que passa pelo centro e liga dois pontos da circunferência?",
-                img: "https://static.todamateria.com.br/upload/ci/rc/circunferencia-raio-diametro-cke.jpg",
+                img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Circle_-_black_simple.svg/200px-Circle_-_black_simple.svg.png",
                 options: ["Diâmetro", "Raio", "Lado"],
                 answer: "Diâmetro"
             },
             {
                 question: "Qual o nome do polígono com 8 lados?",
-                img: "https://static.todamateria.com.br/upload/oc/to/octogono-cke.jpg",
+                img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Regular_octagon.svg/200px-Regular_octagon.svg.png",
                 options: ["Octógono", "Hexágono", "Heptágono"],
                 answer: "Octógono"
             },
             {
                 question: "Qual o nome do ponto central da circunferência?",
-                img: "https://static.todamateria.com.br/upload/ci/rc/circunferencia-raio-diametro-cke.jpg",
+                img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Circle_-_black_simple.svg/200px-Circle_-_black_simple.svg.png",
                 options: ["Centro", "Raio", "Diâmetro"],
                 answer: "Centro"
             },
             {
                 question: "Qual dessas figuras é formada por lados retos?",
-                img: "https://static.todamateria.com.br/upload/qu/ad/quadrado-cke.jpg",
+                img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Square_-_black_simple.svg/200px-Square_-_black_simple.svg.png",
                 options: ["Quadrado", "Circunferência", "Círculo"],
                 answer: "Quadrado"
             }
