--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <h1 class="text-4xl font-bold text-sky-800 mb-2">Estudos 8º Ano</h1>
         <p class="text-slate-600 mb-8">Escolha um conteúdo para começar a estudar:</p>
         <div class="flex flex-col gap-6">
+            <a href="plant.html" class="menu-btn px-8 py-5 bg-green-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-green-700 transition-colors flex items-center justify-center gap-3">
+                <span>🌿 Plantas - 8º Ano (Hellen)</span>
+            </a>
                 <a href="clima_8.html" class="menu-btn px-8 py-5 bg-blue-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-blue-700 transition-colors flex items-center justify-center gap-3">
                     <span>🌦️ Clima e Atividades Humanas - 8º Ano</span>
                 </a>
