--- a/plant.html
+++ b/plant.html
@@ -134,7 +134,7 @@
             /* Questão 29 */
             { question: "Qual grupo tem maior diversidade de espécies?", options: ["Angiospermas", "Gimnospermas", "Pteridófitas"], answer: "Angiospermas" },
             /* Questão 30 */
-            { question: "Qual parte da planta é responsável pela reprodução?", options: ["Flor", "Raiz", "Caule"], answer: "Flor" }
+            { question: "Qual parte da planta é responsável pela reprodução?", options: ["Flor", "Raiz", "Caule"], answer: "Flor" },
                 /* Questão 31 */
                 { question: "O que é clorofila?", options: ["Pigmento verde das plantas", "Tipo de raiz", "Hormônio vegetal"], answer: "Pigmento verde das plantas" },
                 /* Questão 32 */
